# EasyCodeInstaller

./: .gitignore  README.md  common.py  config.py  easy_code_installer.manifest  installer.py  logger.py  main.py  main.spec  pyproject.toml  version_info.txt
.github/workflows/: release.yaml
