[tool.poetry]
name = "easycodeinstaller"
version = "1.0.2"
description = "Приложение установки всего необходимого для прохождения курса по Python от EasyCode"
authors = ["Kristofer Rogue <ice99dragon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.14"
requests = "^2.32.3"
pyinstaller = "^6.10.0"
customtkinter = "^5.2.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
